workspace_dc2/nifi/nifi-registry/nifi-registry-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: nifi-registry
  name: nifi-registry-lb
  namespace: et02-tkg-bigdata-prod
spec:
  ports:
  - name: http-port
    port: 18443
    protocol: TCP
    targetPort: 18443
  selector:
    app: nifi-registry
  type: LoadBalancer
